test/functions/hmac/invalid_algorithm.txt
error: `algorithm` must be one of `sha256`, `sha512`, `sha384`, `sha1`, `md5`
 --> functions/hmac/invalid_algorithm.tql:6:46
  |
6 | select digest = hmac(payload, key, algorithm="sha3_256")
  |                                              ^^^^^^^^^^ 
  |
